Completed Task#73 1. I fixed minor bugs in task#72 occur when trying to connect a relay-to-relay and they are already connected. The result will only update their weight if the connection already exists in the database. 2. Another bug in task#72 for relay-toPC when the connection already exists, the result will only update the wegith. 3. for task#73, the queue limit works as expected for all relays with some restrictions like a limit must be between 1 to 500. 4. Everything was tested in my local environment.

--- a/744Project/Views/EditNetwork/Index.cshtml
+++ b/744Project/Views/EditNetwork/Index.cshtml
@@ -27,7 +27,8 @@
             </h3>
             @*Change a queue limit:*@
             <h3>
-                <a href="../Queues"> Modify Queues </a>
+                <a href="../Queues/Update"> Modify Queues </a>                
+
             </h3>
 
         </div>
