--- a/744Project/Views/Connections/Create.cshtml
+++ b/744Project/Views/Connections/Create.cshtml
@@ -43,7 +43,7 @@
                     <div class="col-md-10">
                         @Html.Editor("weight", new { htmlAttributes = new { @class = "form-control", @type = "number", @step = "any", @min = "1", @max = "500", autocomplete = "on" } })
                         @Html.ValidationMessage("weight", "", new { @class = "text-danger" })
-                        @ViewBag.SuccessMessage
+                        <h4 style="color:green">@ViewBag.SuccessMessage</h4>
                     </div>
                 </div>
 
