--- a/744Project/Views/SecurityQuestions/Create.cshtml
+++ b/744Project/Views/SecurityQuestions/Create.cshtml
@@ -1,29 +1,95 @@
-﻿@model _744Project.Models.SecurityQuestion
+﻿@model _744Project.ViewModels.QuestionsAnswersViewModel
+@*@model _744Project.Models.SecurityQuestion*@
 
 @{
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<div class="container">
+    <h2>Create</h2>
+    <div class="panel panel-default">
+        <div class="panel-body">
 
 
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>SecurityQuestion</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
+
+            <div class="form-horizontal">
+                <h4>SecurityQuestion</h4>
+                <hr />
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                @*<div class="form-group">
             @Html.LabelFor(model => model.AspNetUserID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.AspNetUserID, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.AspNetUserID, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
-        <div class="form-group">
+
+                @*Question 1*@
+                <div class="form-group">
+                    @Html.Label("Question 1", htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.Label("What's your first dog's name?", htmlAttributes: new { @class = "control-label" })
+                        @*@Html.EditorFor(model => model.questions.QuestionText, new { htmlAttributes = new { @class = "form-control" } })*@
+                        @*@Html.ValidationMessageFor(model => model.questions.QuestionText, "", new { @class = "text-danger" })*@
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.Label("Answer 1", htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">                       
+                        @Html.Editor("answer1", new { htmlAttributes = new { @class = "form-control", minlength="4", maxlength="500"} })
+                        @Html.ValidationMessage("answer1", "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                @*Question 2*@
+                <div class="form-group">
+                    @Html.Label("Question 2", htmlAttributes: new { @class = "control-label col-md-2" })
+                    @*@Html.LabelFor(model => model.questions.QuestionText, htmlAttributes: new { @class = "control-label col-md-2" })*@
+                    <div class="col-md-10">
+                        @Html.Label("When did you buy your first car?", htmlAttributes: new { @class = "control-label" })
+                        @*@Html.EditorFor(model => model.questions.QuestionText, new { htmlAttributes = new { @class = "form-control" } })*@
+                        @*@Html.ValidationMessageFor(model => model.questions.QuestionText, "", new { @class = "text-danger" })*@
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.Label("Answer 2", htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.Editor("answer2", new { htmlAttributes = new { @class = "form-control", minlength = "4", maxlength = "500"} })
+                        @Html.ValidationMessage("answer2", "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                @*Question 3*@
+                <div class="form-group">
+                    @Html.Label("Question 3", htmlAttributes: new { @class = "control-label col-md-2" })
+                    @*@Html.LabelFor(model => model.questions.QuestionText, htmlAttributes: new { @class = "control-label col-md-2" })*@
+                    <div class="col-md-10">
+                        @Html.Label("What's your favourite fruit?", htmlAttributes: new { @class = "control-label" })
+                        @*@Html.EditorFor(model => model.questions.QuestionText, new { htmlAttributes = new { @class = "form-control" } })*@
+                        @*@Html.ValidationMessageFor(model => model.questions.QuestionText, "", new { @class = "text-danger" })*@
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.Label("Answer 3", htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.Editor("answer3", new { htmlAttributes = new { @class = "form-control", minlength = "4", maxlength = "500" } })
+                        @Html.ValidationMessage("answer3", "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+
+
+
+
+
+
+
+                @*<div class="form-group">
             @Html.LabelFor(model => model.QuestionID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.QuestionID, new { htmlAttributes = new { @class = "form-control" } })
@@ -37,20 +103,24 @@
                 @Html.EditorFor(model => model.Answer, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Answer, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Create" class="btn btn-default" />
+                    </div>
+                </div>
             </div>
+            }
+
+            <div>
+                @Html.ActionLink("Back to List", "Index")
+            </div>
+
+            @section Scripts {
+                @Scripts.Render("~/bundles/jqueryval")
+            }
+
         </div>
     </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
 </div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
