--- a/744Project/Views/Network/Index.cshtml
+++ b/744Project/Views/Network/Index.cshtml
@@ -107,12 +107,13 @@
 	   var jsonData = @Html.Raw(Json.Encode(Model));
 	   console.log(jsonData);
 
-
+       var processingCenter = 0;
        var ConnectionTemp = {
            edges: []
        };
-		var processingCenter = 0;
+
 		var TransactionList = [];
+
 
 	var NetworkElements = {
 		nodes: [],
@@ -458,7 +459,7 @@
                 //两个点都是激活的，connection不是
                 if (inActivatedNodes.indexOf(edge.data.source) < 0
                     && inActivatedNodes.indexOf(edge.data.target) < 0) {
-                        console.log("execute activate due to connection");
+                        //console.log("execute activate due to connection");
                         edge.data.isActive = true;
                 }
             });
@@ -584,8 +585,14 @@
 			var storeIp = $(this).attr('id');
 			var transitionID = document.getElementById(storeIp).parentNode.id;
             queue.push(transitionID);
-            pathQueue = findShortestPath(storeIp, ProcessingCenterIp);
+
+            pathQueue = findShortestPath("192.168.0.35", "192.168.0.99");
             console.log("node ip queue ", pathQueue);
+
+   //         findShorestPath(storeIp, ProcessingCenterIp);
+			//console.log("node ip queue ", pathQueue);
+			//var path = $.extend(true, {},pathQueue);
+
             backQueue = pathQueue.slice(0);
             //console.log("pathqueue.length,", pathQueue.length);
 			//OLD ANIMATION?
@@ -596,7 +603,7 @@
 			//this is what it should be bun NANS CODE IS BUGGED.
 			//submitNewTransaction(storeIp, transactionId, processingCenter);
 			//THIS IS WHAT I WILL TEST WITH IN THE MEANTIME.
-			submitNewTransaction(storeIp, transactionId, processingCenter, path);
+			//submitNewTransaction(storeIp, transactionId, processingCenter, path);
 
 			//var pc = cy.getElementById(processingCenter);
 			//Using Nan's code to get the shortest path...
@@ -655,18 +662,7 @@
             });
             animations.push(ann);
             nodeList.shift()
-            // nodePath.push(nodeList.shift());
-            //console.log("nodePath", nodePath);
-            //test the pre node whether have the queue in node
-            //var testRecord = nodeList.shift();
-            // if (testRecord) {
-            //     NetworkElements.nodes.forEach(function (node) {
-            //         if (node.data.id == testRecord) {
-            //             console.log("when do the animation, queue of pre node : ", node.data.queue);
-            //         }
-            //     });
-            // }
-            /* ↑ ↑↑↑↑↑↑↑test↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑*/
+            
             NetworkElements.nodes.forEach(function (node) {
                 if (node.data.id == source) {
                     if (node.data.limit > 0) {
