Minor Changes: Fixed queue limit bug (being 1 under what it should be), Clicking on Relays now shows their queue limit, Connections no longer show type, just IPS.

--- a/744Project/Views/Network/GetConnection.cshtml
+++ b/744Project/Views/Network/GetConnection.cshtml
@@ -3,15 +3,15 @@
 
 <div>
 	<dl class="dl-horizontal">
-		<dt>Source Type</dt>
-		<dd>@Model.sourceType</dd>
+		<!--<dt>Source Type</dt>
+		<dd>Model.sourceType</dd>-->
 		<dt>Source Ip</dt>
 		<dd>@Model.sourceIp</dd>
-		<dt>Target Type</dt>
-		<dd>@Model.targetType</dd>
+		<!--<dt>Target Type</dt>
+		<dd>Model.targetType</dd>-->
 		<dt>Target Ip</dt>
 		<dd>@Model.targetIp</dd>
-		<dt>Is Active?</dt>
+		<dt>Is Active</dt>
 		<dd>@Model.isActive</dd>
 	</dl>
 
